# zero2prod

./: Cargo.toml  diesel.toml
migrations/2024-08-22-040302_create_subscriptions/: down.sql  up.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  models.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
